<resources>
    <string name="app_name">Vaccinator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_vaccination">Vaccination</string>
    <string name="title_stats">Stats</string>
    <string name="title_vaccine_news">Vaccine news</string>
    <string name="search_by_pin">Search by Pin</string>
    <string name="search_by_district">search by District</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pincode">Pincode</string>
    <string name="enter_your_pincode">Enter your Pincode</string>
    <string name="search">Search</string>
    <string name="_1213424">1213424</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="state">State</string>
    <string name="district">District</string>
</resources>