<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_vaccination">

    <fragment
        android:id="@+id/navigation_vaccination"
        android:name="com.example.vaccinator.ui.vaccination.VaccinationFragment"
        android:label="@string/title_vaccination"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.vaccinator.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.vaccinator.ui.news.VaccineNewsFragment"
        android:label="@string/title_vaccine_news"
        tools:layout="@layout/fragment_notifications" />
</navigation>